import java.util.ArrayList;

public class Group extends Tournament {

    public Group( String name, ArrayList<Team> teams) {
        super(name,teams);

    }


    @Override
    public void runTournament() {

    }
}
